# isight-firmware-tools

./: AUTHORS  ChangeLog  HOWTO  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
debian/: README.Debian  README.source  changelog  config  control  copyright  dirs  info  postinst  postrm  rules  templates
debian/patches/: fix_format-security.patch  man_ift-extract.patch  series
debian/po/: cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  nl.po  pl.po  pt.po  ro.po  ru.po  sv.po  templates.pot  tr.po  vi.po
doc/: Makefile.am  Makefile.in  ift-export.1  ift-export.info  ift-export.texi  ift-extract.info  ift-extract.texi
po/: ChangeLog  POTFILES.in  fr.po  ja.po
src/: Makefile.am  Makefile.in  export.c  extract.c  isight.rules.in.in  load.c  load.h  udev.c
tests/: Makefile.am  Makefile.in
